# rag

./: .gitignore  README.md  WORKFLOW.md  pyproject.toml
agent-doc/: sample.txt
data/chroma_db/: chroma.sqlite3
doc/: RAG_IMPROVEMENTS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/admin/: AdminAccessGate.tsx  DangerZonePanel.tsx  IngestPanel.tsx  MigrationPanel.tsx  ModelSelectionPanel.tsx  StatusPanel.tsx  SystemSettingsPanel.tsx
scripts/: kill-dev-ports.ps1
src/: api_models.py  api_server.py  cli.py  config.py  document_loader.py  embeddings.py  ingest_jobs.py  notion_loader.py  rag_chain.py  vector_store.py  vision_captioner.py
src/services/: __init__.py  model_service.py  rag_service.py
tests/: test_multimodal_pipeline.py
