[project]
name = "rag-agent"
version = "0.1.0"
description = "A CLI-based RAG agent using Ollama and ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
rag = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
